# todos-app

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: bc93d59df40d_initial_tables.py  cf2cd1ba93df_initial_tables.py
app/: main.py
app/core/: config.py  settings.py
app/db/: clients.py  session.py
app/dependencies/: auth.py  repositories.py  services.py
app/models/: __init__.py  company.py  task.py  user.py
app/repositories/: company_repository.py  task_repository.py  user_repository.py  user_session_repository.py
app/routers/: auth_router.py  company_router.py  task_router.py  user_router.py
app/schemas/: company_schema.py  pagination_meta.py  task_schema.py  user_schema.py
app/services/: auth_service.py  company_service.py  company_services.py  task_service.py  user_service.py
app/utils/: security.py  transactional.py
